--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
    text-align: center;
-   background-image: url("./rym.jpg");
+   /*  background-image: url("./rym.jpg");  */
    background-size:cover;
    height: 100vh;
   width:100vw ;
