--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -1,15 +1,8 @@
-.contenedor {
-    background-color: rgba(121, 51, 250, 0.685);
-    padding: 10px;
-    border-bottom: 2px solid rgba(75, 53, 117, 0.973);
-    height: 60px;
-    
-}
-
-.search {
-    margin-left: 40%;
-    margin-top: -3.5%;
-   
+ 
+ .search {
+    margin-top: 10%;
+    display: flex;
+ 
 }
 
 .searchBar {
@@ -37,9 +30,5 @@
     background-color: rgb(121, 51, 250);
     box-shadow: 0 0 10px  rgb(121, 51, 250), 0 0 40px rgb(121, 51, 250), 0 0 80px  rgb(121, 51, 250) ;
     transition-delay: 0.4s;
-}
+} 
 
-.img {
-    width: 20%;
-    height: 100%;
-}
